minimaxi 语音支持-0.2
